--- a/src/main/webapp/public/misReservas.xhtml
+++ b/src/main/webapp/public/misReservas.xhtml
@@ -4,6 +4,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <meta charset="UTF-8" />
@@ -16,14 +17,17 @@
             crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Oswald;family=Staatliches;display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="../style/recursos.css" />
+    <link rel="stylesheet" href="../style/recursosF.css" />
 
 </h:head>
 <h:body >
     <header class="header">
         <nav class="nav">
-            <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
-            <h1 class="logo nav-link" >Biblioteca ECI</h1>
+            <div class="logos">
+                <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
+                <h1 class="tittleLogo" >Biblioteca ECI</h1>
+            </div>
+
             <button class="nav-toggle" aria-label="Abrir menú">
                 <i class="fas fa-bars"></i>
             </button>
@@ -31,11 +35,13 @@
                 <li class="nav-menu-item">
                     <a href="/faces/index.xhtml" class="nav-menu-link nav-link">Home</a>
                 </li>
+                <c:if  test="#{loginBean.isAdmin()}">
+                    <li class="nav-menu-item">
+                        <a href="/faces/admin/userReservas.xhtml" class="nav-menu-link nav-link">Atras</a>
+                    </li>
+                </c:if>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link nav-link">Mis Reservas</a>
-                </li>
-                <li class="nav-menu-item">
-                    <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active">Iniciar Sesion</a>
+                    <a href="#" class="nav-menu-link nav-link nav-menu-link_active">Cerrar Sesion</a>
                 </li>
             </ul>
         </nav>
@@ -47,7 +53,7 @@
 
                 <div class="p-0 btn-group justify-content-lg-center">
                     <div class="tittle" >
-                        <h1 class="text align-self-center p-2">CONSULTAR EQUIPOS</h1>
+                        <h1 class="text align-self-center p-2">MIS RESERVAS ACTIVAS</h1>
                     </div>
                 </div>
 
@@ -64,12 +70,16 @@
                             <h:outputText value="#{element.id}"/>
                         </p:column>
 
+                        <p:column headerText="Fecha Solicitud" style="text-align: center" >
+                            <h:outputText value="#{element.fechaSolicitud}"/>
+                        </p:column>
+
                         <p:column headerText="Estado" style="text-align: center" >
                             <h:outputText value="#{element.estado}"/>
                         </p:column>
 
-                        <p:column headerText="fecha" style="text-align: center" >
-                            <h:outputText value="#{element.fechaSolicitud}"/>
+                        <p:column headerText="Detalles" style="text-align: center">
+                            <p:button outcome="infoReserva?reservasBean.id=#{element.id}" value="Ver Mas"></p:button>
                         </p:column>
 
                     </p:dataTable>
