--- a/src/main/webapp/public/infoReserva.xhtml
+++ b/src/main/webapp/public/infoReserva.xhtml
@@ -4,11 +4,12 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Libros</title>
+    <title>Equipos</title>
     <link rel = "icon" href ="https://yt3.ggpht.com/ytc/AKedOLQQOBfPPzh-vTH-tz76NykBAc2aU9r4z4UkeJog=s900-c-k-c0x00ffffff-no-rj"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script
@@ -16,26 +17,26 @@
             crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Oswald;family=Staatliches;display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="../style/recursos.css" />
+    <link rel="stylesheet" href="../style/recursosF.css" />
 
 </h:head>
 <h:body >
     <header class="header">
         <nav class="nav">
-            <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
-            <h1 class="logo nav-link" >Biblioteca ECI</h1>
+            <div class="logos">
+                <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
+                <h1 class="tittleLogo" >Biblioteca ECI</h1>
+            </div>
+
             <button class="nav-toggle" aria-label="Abrir menú">
                 <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
-                    <a href="/faces/indexAdmin.xhtml" class="nav-menu-link nav-link">Home</a>
+                    <a href="/faces/index.xhtml" class="nav-menu-link nav-link">Home</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="/faces/admin/addLibro.xhtml" class="nav-menu-link nav-link">Añadir</a>
-                </li>
-                <li class="nav-menu-item">
-                    <a href="/faces/admin/deleteLibro.xhtml" class="nav-menu-link nav-link">Eliminar</a>
+                    <a href="/faces/public/misReservas.xhtml" class="nav-menu-link nav-link">Atras</a>
                 </li>
                 <li class="nav-menu-item">
                     <a href="#" class="nav-menu-link nav-link nav-menu-link_active">Cerrar Sesion</a>
@@ -50,12 +51,12 @@
 
                 <div class="p-0 btn-group justify-content-lg-center">
                     <div class="tittle" >
-                        <h1 class="text align-self-center p-2">CONSULTAR LIBROS</h1>
+                        <h1 class="text align-self-center p-2">INFORMACION DE RESERVA</h1>
                     </div>
                 </div>
 
                 <h:form class="data">
-                    <p:dataTable id="tbl" var="element" value="#{recursosBean.getLibros()}" rows="10"
+                    <p:dataTable id="tbl" var="element" value="#{reservasBean.consultarPorUsuarioMuchaInfo(loginBean.user,reservasBean.id)}" rows="10"
                                  paginator="true"
                                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {Exporters}"
                                  currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
@@ -67,25 +68,8 @@
                             <h:outputText value="#{element.id}"/>
                         </p:column>
 
-                        <p:column headerText="Nombre" style="text-align: center" filterBy="#{element.nombre}" filterStyle="width: 100px;" filterMatchMode="contains">
-                            <h:outputText value="#{element.nombre}"/>
-                        </p:column>
-
-                        <p:column headerText="Ubicacion" style="text-align: center" filterBy="#{element.ubicacion}" filterStyle="width: 100px;" filterMatchMode="contains">
-                            <h:outputText value="#{element.ubicacion}"/>
-                        </p:column>
-
-                        <p:column headerText="Unidades" style="text-align: center" sortBy="#{element.capacidad}" filterBy="#{element.capacidad}" filterStyle="width: 100px;" filterMatchMode="contains">
-                            <h:outputText value="#{element.capacidad}"/>
-                        </p:column>
-
-                        <p:column headerText="Estado" style="text-align: center" >
-                            <h:outputText value="#{element.estado}"/>
-                        </p:column>
-
-                        <p:column headerText="Haga su reserva" style="text-align: center">
-                            <p:button outcome="/public/verHorarios" value="Ver horarios disponibles">
-                            </p:button>
+                        <p:column headerText="Fecha Solicitud" style="text-align: center" >
+                            <h:outputText value="#{element.fechaSolicitud}"/>
                         </p:column>
 
                     </p:dataTable>
