--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -15,7 +15,7 @@
             crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Oswald;family=Staatliches;display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="../style/recursos.css" />
+    <link rel="stylesheet" href="../style/recursosF.css" />
 
 </h:head>
 <h:body>
