--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -44,7 +44,7 @@
                     </li>
 
                     <li class="nav-menu-item">
-                        <a href="#" class="nav-menu-link nav-link nav-menu-link_active" >Cerra Sesion</a>
+                        <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active" >Cerrar Sesion</a>
                     </li>
                 </c:if>
 
@@ -58,7 +58,7 @@
                     </li>
 
                     <li class="nav-menu-item">
-                        <a href="#" class="nav-menu-link nav-link nav-menu-link_active">Cerra Sesion</a>
+                        <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active">Cerrar Sesion</a>
                     </li>
                 </c:if>
             </ul>
