--- a/src/main/webapp/public/misReservas.xhtml
+++ b/src/main/webapp/public/misReservas.xhtml
@@ -79,7 +79,8 @@
                         </p:column>
 
                         <p:column headerText="Detalles" style="text-align: center">
-
+                            <p:commandButton icon="pi pi-search" title="View" action="#{reservasBean.masInfoRecurso(element)}">
+                            </p:commandButton>
                         </p:column>
 
                     </p:dataTable>
