--- a/src/main/webapp/public/recursoEquipos.xhtml
+++ b/src/main/webapp/public/recursoEquipos.xhtml
@@ -105,10 +105,12 @@
                             <h:outputText value="#{element.estado}"/>
                         </p:column>
 
-                        <p:column headerText="Haga su reserva" style="text-align: center">
-                            <p:button outcome="verHorarios" value="Ver horarios disponibles">
-                            </p:button>
-                        </p:column>
+                        <c:if  test="#{!loginBean.isVisitante()}">
+                            <p:column headerText="Haga su reserva" style="text-align: center">
+                                <p:button outcome="verHorarios" value="Ver horarios disponibles">
+                                </p:button>
+                            </p:column>
+                        </c:if>
                     </p:dataTable>
                 </h:form>
             </div>
