Historia 7 consultar reservas terminada. update

--- a/src/main/webapp/admin/userReservas.xhtml
+++ b/src/main/webapp/admin/userReservas.xhtml
@@ -80,7 +80,7 @@
                         </p:column>
 
                         <p:column headerText="Informacion" style="text-align: center">
-                            <p:commandButton icon="pi pi-search" value="Ver Mas" title="View" action="#{usuariosBean.masInfoReserva(element)}">
+                            <p:commandButton icon="pi pi-search" value="Ver Mas" title="View" action="#{usuariosBean.masInfoReserva(element.email)}">
                             </p:commandButton>
                         </p:column>
 
