--- a/src/main/webapp/public/misReservas.xhtml
+++ b/src/main/webapp/public/misReservas.xhtml
@@ -71,7 +71,7 @@
                 <h:form class="data">
 
                     <c:if  test="#{loginBean.isAdmin()}">
-                        <p:dataTable id="tbl" var="element" value="#{reservasBean.consultarPorUsuarioPocaInfo(usuariosBean.getUsuarioReservas().email)}" rows="10"
+                        <p:dataTable id="tbl" var="element" value="#{reservasBean.consultarPorUsuarioPocaInfo(usuariosBean.getUsuarioReservas())}" rows="10"
                                      paginator="true"
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {Exporters}"
                                      currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
