--- a/src/main/webapp/admin/userReservas.xhtml
+++ b/src/main/webapp/admin/userReservas.xhtml
@@ -38,7 +38,7 @@
                     <a href="#" class="nav-menu-link nav-link">Reporte</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link nav-link nav-menu-link_active">Cerrar Sesion</a>
+                    <p:commandButton value="Cerrar Sesion" actionListener="#{loginBean.logOut('/faces/index.xhtml')}"/>
                 </li>
             </ul>
         </nav>
