--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui" xmlns:c="http://shiro.apache.org/tags">
+      xmlns:p="http://primefaces.org/ui" >
 
 <h:head>
     <meta charset="UTF-8" />
@@ -21,15 +21,15 @@
         <div class="contenedor">
             <div class="input-contenedor">
                 <i class="fas fa-envelope icon"></i>
-                <p:inputText id="user_name" type="text" placeholder="example@mail.com" required="true" value="#{loginBean.user}"/>
+                <p:inputText id="user_name" type="text" placeholder="nombre.apellido" value="#{loginBean.user}"/>
             </div>
             <div class="input-contenedor">
                 <i class="fas fa-key icon"></i>
-                <p:inputText type="password" placeholder="Contraseña" required="true" value="#{loginBean.passwd}" />
+                <p:inputText type="password" placeholder="Contraseña" value="#{loginBean.passwd}" />
             </div>
             <div class="login">
                 <p:commandButton id="mybutton" class="button1"  value="Ingresar" alig="center" actionListener="#{loginBean.login}"/>
-                <p:commandButton  class="button2" value="Cancelar" onclick="history.back()" />
+                <p:commandButton id="myButton" class="button2" value="Cancelar" actionListener="#{loginBean.logOut}" />
                 <p>Recuerda Devolver los Recursos en el plazo establecido.</p>
                 <h:outputText id = "message" value="#{loginBean.showError()}">
                     <p:autoUpdate/>
